AC_INIT([offlinefs], [0.2.1])
AC_CONFIG_MACRO_DIR([m4])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE()

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_PROG_INSTALL

PKG_CHECK_MODULES([DBUS], [dbus-1])
PKG_CHECK_MODULES([FUSE], [fuse])
PKG_CHECK_MODULES([CONFUSE], [libconfuse])

AC_CONFIG_FILES([Makefile libraries/Makefile libraries/libofs/Makefile \
	libraries/libofsconf/Makefile libraries/libofshash/Makefile mounthelper/Makefile ofs-gui/Makefile \
	src/Makefile])
AC_OUTPUT
