INCLUDES = 
METASOURCES = AUTO
bin_PROGRAMS = test-ofs-gui
test_ofs_gui_SOURCES = test_ofsadvancedsettingsdlg.cpp \
	test_ofscachingsettingsdlg.cpp test_ofsconfirmfiledeletedlg.cpp test_ofspropertiesdlg.cpp
noinst_HEADERS = test_ofsadvancedsettingsdlg.h test_ofscachingsettingsdlg.h \
	test_ofsconfirmfiledeletedlg.h test_ofspropertiesdlg.h
