INCLUDES = $(all_includes) --cflags-only-I` -I$(top_srcdir)/libraries/libofs -I$(top_srcdir)/libraries/libofsconf -I$(top_srcdir)/libraries/libofshash `pkg-config dbus-1 fuse
METASOURCES = AUTO
bin_PROGRAMS = test-ofs
test_ofs_SOURCES = test_synchronizationmanager.cpp test_synclogger.cpp
noinst_HEADERS = test_synchronizationmanager.h test_synclogger.h
